# auth-base

./: .env  README.md  docker-compose.yml
app/: main.py  pyproject.toml
app/domain/entity/: user.py
app/domain/repository/: user.py
app/domain/repository/database/: dbutil.py
app/domain/repository/database/sql/user/: get_user_by_email.sql  get_user_by_id.sql  insert_user.sql
app/domain/repository/sql/: query.py
app/domain/repository/sql/user/: last_insert_id.sql
app/domain/service/: login.py
app/domain/service/auth/: login.py
app/domain/service/crud/: create.py  read.py
app/domain/util/: hash.py
app/infrastructure/: database.py
app/router/: login.py
app/router/auth/: login.py
app/router/crud/: create.py  read.py
app/schema/: login.py
app/schema/crud/: create.py  read.py
app/src/: main.py
app/src/domain/entity/: user.py
app/src/domain/repository/: user.py
app/src/domain/repository/sql/user/: get_user_by_email.sql
app/src/domain/service/: login.py
app/src/router/: login.py
app/src/routers/: login.py
app/src/schema/: login.py
app/src/schemas/: login.py
dockerfiles/python/: Dockerfile
scripts/mysql/: init.sql
